fixed employees department dept on mobile

--- a/_sass/employees.sass
+++ b/_sass/employees.sass
@@ -101,11 +101,18 @@
         padding: 0px
         .department-title
           flex: 0 0 auto
-          background: $c100
-          text-align: center
+          position: relative
           margin: 2em
-          padding: 1em
+          height: 3em
           margin-top: 0px
-          border-radius: .25em
+          text-align: center
           h2
+            position: absolute
+            top: 0px
+            left: 0px
+            right: 0px
+            bottom: 0px
+            padding: .5em
+            border-radius: .25em
+            background: $c100
             margin: 0px
